--- a/views/signupOne.html
+++ b/views/signupOne.html
@@ -17,13 +17,13 @@
             </a>
         </div>
         <div class="signup">
-            <a href="#">
+            <a href="login.html">
                 <p>Iniciar sesión</p>
             </a>
         </div>
     </nav>
     <div class="oneStep">
-        <form action="">
+        <form action="login.html">
             <div class="oneStep-text">
                 <p>PASO <b>1</b> DE <b>3</b></p>
                 <h1>¡Hola de nuevo!
@@ -42,7 +42,7 @@
                     </label>
                 </div>
                 <p class="p-password">¿Olvidaste tu contraseña?</p>
-                <button id="newUser-btn" class="oneStep-btn">
+                <button id="newUser-btn" type="submit" class="oneStep-btn">
                     <span>Siguiente</span>
                 </button>
             </div>
