--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,5 @@
 @import '_signupOne.scss';
+@import '_login.scss';
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 
@@ -6,6 +7,7 @@
 *{
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 .index-body{
@@ -67,7 +69,11 @@
                 border-radius: 3px;
                 font-size: 1em;
                 line-height: 1em;
+                text-decoration: none;
                 cursor: pointer;
+                &:hover{
+                    text-decoration: underline;
+                }
             }
         }
     }
@@ -139,11 +145,11 @@
                     height: 70px;
                     .box-form{
                         position: relative;
-                        height: 70px;
+                        height: 100%;
                         width: 500px;
                         input{
-                            height: 60px;
-                            width: 490px;
+                            height: 100%;
+                            width: 100%;
                             padding: 10px 0 0 10px;
                             box-shadow: inset 0 0 0 1px #aaa;
                             border: none;
@@ -168,8 +174,8 @@
                             position: absolute;
                             top: 0;
                             left: 0;
-                            height: 70px;
-                            width: 500px;
+                            height: 100%;
+                            width: 100%;
                             cursor: text;
                             .placelabel{
                                 color: #8c8c8c;
