--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,4 @@
-@import '_signupOne.scss';
-@import '_login.scss';
-
+// font
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 
 // reset
@@ -9,6 +7,12 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+// imports
+@import '_signupOne.scss';
+@import '_login.scss';
+@import '_home.scss';
+
 
 .index-body{
     font-family: 'Roboto', sans-serif;
