--- a/views/home.html
+++ b/views/home.html
@@ -4,59 +4,126 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nesquik</title>
+    <title>Home - Nesquik</title>
     <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
-    <style>
-        .container{
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-evenly;
-            margin-top: 20px;
-        }
-        .pelicula{
-            width: 250px;
-            margin: 20px 30px;
-        }
-        img{
-            width: 100%;
-            height: 375px;
-            box-shadow: 5px 5px 10px 1px rgb(0, 0, 0, .6);
-            cursor: pointer;
-        }
-        .info{
-            width: 100%;
-        }
-        h3, p{
-            margin-top: .5em;
-            margin-bottom: .5em;
-        }
-    </style>
+
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.css'>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick-theme.min.css'>
+    <link rel="stylesheet" href="../css/main.css">
 </head>
-<body>
-    <h1>NESQUIK</h1>
-    <input id="btn" type="button" value="Buscar">
-    <input id="search" type="text" name="buscar" list="peliculas">
-    <datalist id="peliculas">
-        <option value="GoodFellas">
-        <option value="Inglourious Basterds">
-        <option value="Kill Bill: Vol. 1">
-        <option value="Kill Bill: Vol. 2">
-        <option value="Once Upon a Time in Hollywood">
-        <option value="Pulp Fiction">
-        <option value="Taxi Driver">
-        <option value="The Irishman">
-        <option value="The Wolf Of Wall Street">
-        <option value="Acción">
-        <option value="Comedia">
-        <option value="Crimen">
-        <option value="Drama">
-        <option value="Martin Scorsese">
-        <option value="Quentin Tarantino">
-    </datalist>
-    <div id="container" class="container">
-        
+<body class="home-body">
+    <nav class="nav-home">
+        <div class="logo-links">
+            <div class="nav-logo">
+                <a href="home.html">
+                    <svg version="1.1" id="nesquick_xA0_Imagen_00000095306780870904544910000003613550337525457058_"
+                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 357.62 94.14"
+                        style="enable-background:new 0 0 357.62 94.14;" xml:space="preserve">
+                    <style type="text/css">
+                        .st0{fill:#E50914;}
+                    </style>
+                    <g>
+                        <path class="st0" d="M31.85,53.08c0-17.12,0-34.25,0-51.52c4.72,0,9.34,0,14.06,0c0,28.8,0,57.52,0,86.51
+                            c-2.46,0.34-4.97,0.72-7.49,1.03c-2.08,0.25-4.19,0.31-6.25,0.67c-1.38,0.24-1.9-0.27-2.3-1.48c-5.01-15.07-10.06-30.13-15.1-45.19
+                            c-0.06-0.17-0.23-0.31-0.62-0.82c0,16.74,0,33.1,0,49.63c-4.8,0.68-9.39,1.33-14.15,2C0,63.11,0,32.4,0,1.55c4.28,0,8.58,0,13.12,0
+                            c6.05,17.14,12.15,34.4,18.25,51.65C31.53,53.16,31.69,53.12,31.85,53.08z"/>
+                        <path class="st0" d="M309.97,1.57c4.72,0,9.36,0,14.29,0c0,6.16,0,12.21,0,18.26c0,5.97,0,11.95,0,17.92
+                            c0.19,0.04,0.39,0.07,0.58,0.11c1.57-3.02,3.18-6.02,4.69-9.07c4.28-8.65,8.5-17.33,12.79-25.97c0.28-0.57,0.94-1.33,1.45-1.34
+                            c4.44-0.11,8.87-0.06,13.7-0.06c-1.9,3.71-3.64,7.12-5.4,10.51c-3.77,7.24-7.58,14.47-11.28,21.74c-0.37,0.72-0.35,1.83-0.11,2.64
+                            c5.47,18.63,11,37.25,16.52,55.87c0.16,0.56,0.25,1.14,0.43,1.94c-4.89-0.59-9.57-1.11-14.24-1.77c-0.47-0.07-1-0.97-1.18-1.58
+                            c-3.76-12.46-7.47-24.94-11.2-37.41c-0.19-0.63-0.43-1.25-0.88-1.92c-1.99,4.78-6.14,8.46-5.81,14.36
+                            c0.4,7.27,0.12,14.57,0.13,21.86c0,0.73,0,1.46,0,2.38c-4.9-0.64-9.57-1.26-14.46-1.9C309.97,59.36,309.97,30.58,309.97,1.57z"/>
+                        <path class="st0" d="M222.2,1.51c4.91,0,9.55,0,14.5,0c0,0.89,0,1.75,0,2.6c0.02,19.43,0.05,38.85,0.07,58.28
+                            c0,0.74-0.01,1.48,0.01,2.23c0.17,6.12,3.8,9.07,9.88,8.02c2.72-0.47,4.47-2.26,4.88-5.21c0.2-1.39,0.2-2.83,0.19-4.24
+                            c-0.04-19.7-0.09-39.39-0.14-59.09c0-0.8,0-1.6,0-2.54c4.71,0,9.26,0,14.05,0c0,0.79,0,1.52,0,2.24
+                            c0.03,20.03,0.07,40.07,0.08,60.1c0,1.75-0.09,3.51-0.32,5.24c-1.22,8.9-6.87,14.33-15.84,15.15c-4.33,0.4-8.63,0.17-12.86-1.06
+                            c-8.76-2.54-14.19-9.25-14.38-18.36c-0.18-8.36-0.08-16.73-0.09-25.09c-0.02-11.87-0.02-23.74-0.03-35.62
+                            C222.2,3.36,222.2,2.56,222.2,1.51z"/>
+                        <path class="st0" d="M60.05,1.51c13.18,0,26.16,0,39.26,0c0,4.76,0,9.44,0,14.34c-8.38,0-16.66,0-25.07,0c0,6.53,0,12.84,0,19.34
+                            c6.23,0,12.47,0,18.84,0c0,4.76,0,9.38,0,14.41c-6.24,0-12.49,0-18.85,0c0,7.45,0,14.5,0,21.77c8.36-0.53,16.62-1.05,25.22-1.6
+                            c0,2.83,0,5.43,0,8.04c0,1.42-0.08,2.84,0.02,4.25c0.09,1.28-0.33,1.76-1.66,1.86c-11.93,0.9-23.86,1.88-35.79,2.82
+                            c-0.6,0.05-1.21,0.01-1.96,0.01C60.05,58.36,60.05,30,60.05,1.51z"/>
+                        <path class="st0" d="M139,23.65c0-1.97,0.13-3.79-0.03-5.59c-0.36-4.32-2.87-6.48-7.29-6.45c-4.39,0.03-6.87,2.26-7.28,6.52
+                            c-0.41,4.22,0.79,7.99,3.79,10.91c3.19,3.1,6.76,5.8,10.06,8.78c3.26,2.93,6.79,5.68,9.5,9.06c6.01,7.47,6.62,16.04,3.52,24.87
+                            c-1.85,5.27-5.92,8.48-11.17,10.09c-5.57,1.7-11.3,2.12-17.05,1.04c-8.03-1.52-12.71-7.12-13.51-16.2
+                            c-0.21-2.34-0.03-4.71-0.03-7.46c4.5,0,8.96,0,13.67,0c0,1.68-0.03,3.55,0.01,5.42c0.1,4.78,2.38,7.19,6.84,7.26
+                            c5.21,0.08,8-2.31,8.34-7.05c0.35-4.94-1.05-9.28-4.65-12.67c-2.94-2.77-6.26-5.14-9.27-7.85c-3.36-3.02-6.93-5.92-9.73-9.41
+                            c-5.61-7-6.31-15.08-3.34-23.35c2.59-7.22,8.42-10.59,15.75-11.18c3.93-0.31,8-0.11,11.88,0.59c7.1,1.28,11.44,5.88,12.99,12.85
+                            c0.61,2.73,0.58,5.62,0.72,8.44c0.02,0.45-0.63,1.32-0.98,1.33C147.63,23.68,143.51,23.65,139,23.65z"/>
+                        <path class="st0" d="M280.24,1.55c4.65,0,9.29,0,14.22,0c0,28.37,0,56.71,0,85.35c-4.64-0.39-9.32-0.79-14.22-1.2
+                            C280.24,57.6,280.24,29.7,280.24,1.55z"/>
+                        <path class="st0" d="M209.33,77.86c-1.12-0.16-2.28-0.39-3.26-0.9c-0.4-0.21-0.74-1.48-0.49-1.85c2.69-3.99,3.42-8.43,3.39-13.1
+                            c-0.04-6.88-0.01-13.76-0.03-20.63c-0.03-7.89,0.11-15.78-0.18-23.66c-0.29-8.05-5.15-13.97-12.84-16.38
+                            c-4.61-1.44-9.35-1.68-14.04-0.88c-2.95,0.5-6.01,1.32-8.6,2.76c-6.46,3.61-8.59,9.75-8.62,16.76
+                            c-0.06,14.23-0.09,28.46-0.02,42.68c0.06,11.12,5.51,17.43,16.49,19.34c5.11,0.89,10.2,0.88,15.18-0.53
+                            c3.7,6.59,8.97,9.07,16.12,7.63c0-3.64,0-7.31,0-11.21C211.33,77.89,210.31,78,209.33,77.86z M194.49,61.49
+                            c0,0.74,0,1.48-0.05,2.22c-0.37,6.24-5.3,9.29-11.13,6.87c-1.93-0.8-3.24-2.22-3.72-4.25c-0.29-1.23-0.42-2.53-0.43-3.8
+                            c-0.03-14.22-0.02-28.44-0.02-42.66c0-0.34,0-0.67,0.01-1.01c0.21-4.84,2.61-7.29,7.27-7.4c4.92-0.11,7.79,2.27,7.91,7.17
+                            c0.18,7.61,0.05,15.23,0.05,22.85c0.03,0,0.07,0,0.1,0C194.5,48.14,194.5,54.82,194.49,61.49z"/>
+                    </g>
+                    </svg>
+                </a>
+            </div>
+            <div class="nav-links">
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Series</a></li>
+                    <li><a href="#">Peliculas</a></li>
+                    <li><a href="#">Novedades populares</a></li>
+                    <li><a href="#">Mi lista</a></li>
+                    <li><a href="#">Explora por idiomas</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="search-container">
+            <div class="searchInput">
+                <button id="btn" type="submit">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="#fff" xmlns="http://www.w3.org/2000/svg" class="search-icon"><path fill-rule="evenodd" clip-rule="evenodd" d="M13 11C13 13.7614 10.7614 16 8 16C5.23858 16 3 13.7614 3 11C3 8.23858 5.23858 6 8 6C10.7614 6 13 8.23858 13 11ZM14.0425 16.2431C12.5758 17.932 10.4126 19 8 19C3.58172 19 0 15.4183 0 11C0 6.58172 3.58172 3 8 3C12.4183 3 16 6.58172 16 11C16 11.9287 15.8417 12.8205 15.5507 13.6497L24.2533 18.7028L22.7468 21.2972L14.0425 16.2431Z" fill="#fff"></path></svg>
+                </button>
+                <input id="search" type="text" name="buscar" list="peliculas" placeholder="Títulos, personas, géneros">
+            </div>
+            <datalist id="peliculas">
+                <option value="GoodFellas">
+                <option value="Inglourious Basterds">
+                <option value="Kill Bill: Vol. 1">
+                <option value="Kill Bill: Vol. 2">
+                <option value="Once Upon a Time in Hollywood">
+                <option value="Pulp Fiction">
+                <option value="Taxi Driver">
+                <option value="The Irishman">
+                <option value="The Wolf Of Wall Street">
+                <option value="Acción">
+                <option value="Comedia">
+                <option value="Crimen">
+                <option value="Drama">
+                <option value="Martin Scorsese">
+                <option value="Quentin Tarantino">
+            </datalist>
+        </div>
+    </nav>
+    <div class="popular">
+        <div id="container"></div>
+        <h1>Populares en Netflix</h1>
+        <div class="popular-movies">
+            <div class="slider responsive shadow">
+                <div class="card"><img src="../img/goodfellas.jpg"></div>
+                <div class="card"><img src="../img/inglourious-basterds.jpg"></div>
+                <div class="card"><img src="../img/kill-bill1.jpg"></div>
+                <div class="card"><img src="../img/kill-bill2.jpg"></div>
+                <div class="card"><img src="../img/pulp-fiction.jpg"></div>
+                <div class="card"><img src="../img/the-irishman.jpg"></div>
+                <div class="card"><img src="../img/the-wolf-of-wall-street.jpg"></h3></div>
+                <div class="card"><img src="../img/once-upon-a-time.jpg"></div>
+                <div class="card"><img src="../img/taxi-driver.jpg"></div>
+            </div>
+        </div>
     </div>
 
+    <!-- Slick Slider -->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js'></script>
+    <!-- My js -->
     <script src="../js/home.js"></script>
+    <script src="../js/slider.js"></script>
 </body>
 </html>
